--- a/gb/23/11/20/n14120069.md
+++ b/gb/23/11/20/n14120069.md
@@ -1,31 +1,31 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>让孩子玩得安全 曼哈顿下城居民联盟美化罗斯福公园</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120070-170354-600x400.jpg" />
 <h6>图中人物由左而右为：眼科医师居德琳、罗斯福公园联盟主席刘安理、副主席李翠珊、志愿者。（林宜君／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年11月20日讯】（大纪元记者林宜君<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）周日（11月19日）下午3点，在洪青体育会的舞狮与锣钹声中，纽约市非营利组织“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BD%97%E6%96%AF%E7%A6%8F%E5%85%AC%E5%9B%AD.md#1">罗斯福公园</a>联盟”（SDR Park Alliance）顺利完成了11月的清洁美化行动。</p>
+	<p>【大纪元2023年11月20日讯】（大纪元记者林宜君纽约报导）周日（11月19日）下午3点，在洪青体育会的舞狮与锣钹声中，纽约市非营利组织“罗斯福公园联盟”（SDR Park Alliance）顺利完成了11月的清洁美化行动。</p>
 <p>当天计有80名志愿者参加，其中有超过三分之一是年仅5、6岁的小小孩，共同在格兰街（Grand St）到地兰西街（Delancey St）一带，打扫出二十多袋垃圾，并种下上千个水仙花苞。</p>
-<figure id="attachment_14120071" aria-describedby="caption-attachment-14120071" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120071-170355.jpg"><img class="size-large wp-image-14120071" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120071-170355-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120071" class="wp-caption-text">2023年11月19日，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BD%97%E6%96%AF%E7%A6%8F%E5%85%AC%E5%9B%AD.md#1">罗斯福公园</a>联盟在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>市曼哈顿下城的公园内举办净园与种花行动。（林宜君／大纪元）</figcaption></figure>
-<figure id="attachment_14120077" aria-describedby="caption-attachment-14120077" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120077-170361.jpg"><img class="size-large wp-image-14120077" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120077-170361-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120077" class="wp-caption-text">2023年11月19日，罗斯福公园联盟净园活动整理出的成堆垃圾。（林宜君／大纪元）</figcaption></figure>
-<p>公园联盟主席与联合创办人刘理安（Anli Liu）是两个孩子的母亲，她希望在联合社区共同美化公园之际，也能提升社区与外界重视公园安全的意识。本业为精神科医师与研究学者的刘理安在接受《大纪元时报》采访时表示，“我们常常使用这个公园，但我意识到这公园里有许多犯罪与用药问题，让人感觉这个公园被忽视了。”</p>
-<p>上周四（16日）晚间，罗斯福公园北侧，位于布伦街（Broome St）与地兰西街（Delancey St）一侧发生了15岁的未成年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%B8%E6%B0%91.md#1">游民</a>持利器刺死24岁游民阿隆索（Pasquale Alonso）。这起命案让原本名声就不好的罗斯福公园，又蒙上了一层阴影。</p>
-<figure id="attachment_14120075" aria-describedby="caption-attachment-14120075" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120075-170359.jpg"><img class="size-large wp-image-14120075" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120075-170359-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120075" class="wp-caption-text">2023年11月19日，纽约市曼哈顿罗斯福公园里的男性<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%B8%E6%B0%91.md#1">游民</a>聚集在足球场外围。（林宜君／大纪元）</figcaption></figure>
-<figure id="attachment_14120073" aria-describedby="caption-attachment-14120073" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120073-170357.jpg"><img class="size-large wp-image-14120073" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120073-170357-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120073" class="wp-caption-text">2023年11月19日，纽约市曼哈顿罗斯福公园的垃圾桶外堆满了垃圾。（林宜君／大纪元）</figcaption></figure>
-<p>刘理安对《大纪元》表示，公园联盟的董事会成员在罗斯福公园附近有物业，该成员曾对她表示公园内的暴力事件常常被低估与未向警方报案，“几乎三、四天就会发生暴力事件”。</p>
-<p>“因此，我们正在努力引起社区更加关注这些问题，也希望市政府能提供更多支持，也呼吁当地业者和学校都能参与，让罗斯福公园成为更安全的地方。”刘理安说。</p>
+<figure id="attachment_14120071" aria-describedby="caption-attachment-14120071" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120071-170355.jpg"><img decoding="async" class="size-large wp-image-14120071" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120071-170355-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120071" class="wp-caption-text">2023年11月19日，罗斯福公园联盟在纽约市曼哈顿下城的公园内举办净园与种花行动。（林宜君／大纪元）</figcaption></figure>
+<figure id="attachment_14120077" aria-describedby="caption-attachment-14120077" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120077-170361.jpg"><img decoding="async" class="size-large wp-image-14120077" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120077-170361-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120077" class="wp-caption-text">2023年11月19日，罗斯福公园联盟净园活动整理出的成堆垃圾。（林宜君／大纪元）</figcaption></figure>
+<p>公园联盟主席与联合创办人刘安理（Anli Liu）是两个孩子的母亲，她希望在联合社区共同美化公园之际，也能提升社区与外界重视公园安全的意识。本业为精神科医师的刘安理在接受《大纪元时报》采访时表示，“我们常常使用这个公园，但我意识到这公园里有许多犯罪与用药问题，让人感觉这个公园被忽视了。”</p>
+<p>上周四（16日）晚间，罗斯福公园北侧，位于布伦街（Broome St）与地兰西街（Delancey St）一侧发生了15岁的未成年游民持利器刺死24岁游民阿隆索（Pasquale Alonso）。这起命案让原本名声就不好的罗斯福公园，又蒙上了一层阴影。</p>
+<figure id="attachment_14120075" aria-describedby="caption-attachment-14120075" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120075-170359.jpg"><img decoding="async" class="size-large wp-image-14120075" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120075-170359-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120075" class="wp-caption-text">2023年11月19日，纽约市曼哈顿罗斯福公园里的男性游民聚集在足球场外围。（林宜君／大纪元）</figcaption></figure>
+<figure id="attachment_14120073" aria-describedby="caption-attachment-14120073" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120073-170357.jpg"><img decoding="async" class="size-large wp-image-14120073" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120073-170357-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120073" class="wp-caption-text">2023年11月19日，纽约市曼哈顿罗斯福公园的垃圾桶外堆满了垃圾。（林宜君／大纪元）</figcaption></figure>
+<p>刘安理对《大纪元》表示，公园联盟的董事会成员在罗斯福公园附近有物业，该成员曾对她表示公园内的暴力事件常常被低估与未向警方报案，“几乎三、四天就会发生暴力事件”。</p>
+<p>“因此，我们正在努力引起社区更加关注这些问题，也希望市政府能提供更多支持，也呼吁当地业者和学校都能参与，让罗斯福公园成为更安全的地方。”刘安理说。</p>
 <p>当天下午2点半左右，本报记者从公园位于东豪斯登街（E Houston St）的入口进入时，目睹一名男性游民大声大嚷地朝着路过的女性行人“张开双手”，引得行人大声尖叫来试图吓阻游民举止。记者继续沿着公园靠近科西街（Forsyth St）一侧往南走，却发现了有几个球场都空无一人，但场外有男性与推车群聚。</p>
-<figure id="attachment_14120074" aria-describedby="caption-attachment-14120074" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120074-170358.jpg"><img class="size-large wp-image-14120074" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120074-170358-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120074" class="wp-caption-text">2023年11月19日，安德莉雅的小孩在纽约市罗斯福公园内。（林宜君／大纪元）</figcaption></figure>
+<figure id="attachment_14120074" aria-describedby="caption-attachment-14120074" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120074-170358.jpg"><img decoding="async" class="size-large wp-image-14120074" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120074-170358-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120074" class="wp-caption-text">2023年11月19日，安德莉雅的小孩在纽约市罗斯福公园内。（林宜君／大纪元）</figcaption></figure>
 <p>其中一个球场，只有安德莉雅（Andrea）一家四口使用。她与先生、10岁儿子与襁褓中的女儿目前住在与罗斯福公园对望，收容无证客家庭的盖兹比酒店（Gatsby Hotel）。安德莉雅表示，公园附近的街道不安全，“我们尽量不在晚上出门”。</p>
 <p>罗斯福公园并不是纽约市最恶名昭著的市立公园，根据纽约市警局公布今年第三季度的七大犯罪率，法拉盛可乐娜公园、华盛顿广场公园的犯罪数都远高于罗斯福公园。然而，当地的毒贩与暴力犯罪、销赃等治安问题，在社区中已是人尽皆知。</p>
-<p>罗斯福公园占地超过7英亩（近3公顷），横跨华埠与曼哈顿下城的9个街区，是当地珍贵的城市绿洲。为了维护公园的使用品质，刘理安与公园联盟副主席李翠珊（Susan Lee）共同成立罗斯福公园联盟，并成功向纽约州下城振兴金计划申请200万美元，用于维护格兰街到地兰西街一带与修复赫斯特街游乐场。</p>
+<p>罗斯福公园占地超过7英亩（近3公顷），横跨华埠与曼哈顿下城的9个街区，是当地珍贵的城市绿洲。为了维护公园的使用品质，刘安理与公园联盟副主席李翠珊（Susan Lee）共同成立罗斯福公园联盟，并成功向纽约州下城振兴金计划申请200万美元，用于维护格兰街到地兰西街一带与修复赫斯特街游乐场。</p>
 <p>公园联盟副主席李翠珊受访时表示，“这个月的清洁公园活动来了最多的志愿者，这表明民众已经开始注意到我们在公园和社区所做的工作。”</p>
 <p>李翠珊说，“我们正在努力把清洁范围扩大到公园的其它区域，因为我们注意到公园并没有被社区充分地使用，而是被毒贩和吸毒者使用，但是我们想要确保孩子能有安全的游乐空间，而老年人也能有安全的聚会场所”</p>
 <p>她表示，华埠与周围的公寓非常小，而公园的游乐场等于是居民家的客厅，是“家”的延伸。</p>
-<figure id="attachment_14120072" aria-describedby="caption-attachment-14120072" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120072-170356.jpg"><img class="size-large wp-image-14120072" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120072-170356-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120072" class="wp-caption-text">2023年11月19日，志愿者响应罗斯福公园联盟的净园与种花行动。（林宜君／大纪元）</figcaption></figure>
-<figure id="attachment_14120076" aria-describedby="caption-attachment-14120076" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120076-170360.jpg"><img class="size-large wp-image-14120076" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120076-170360-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120076" class="wp-caption-text">2023年11月19日，洪青体育会用舞狮表演响应罗斯福公园联盟的净园与种花活动。（林宜君／大纪元）</figcaption></figure>
+<figure id="attachment_14120072" aria-describedby="caption-attachment-14120072" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120072-170356.jpg"><img decoding="async" class="size-large wp-image-14120072" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120072-170356-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120072" class="wp-caption-text">2023年11月19日，志愿者响应罗斯福公园联盟的净园与种花行动。（林宜君／大纪元）</figcaption></figure>
+<figure id="attachment_14120076" aria-describedby="caption-attachment-14120076" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/11/id14120076-170360.jpg"><img decoding="async" class="size-large wp-image-14120076" src="https://i.epochtimes.com/assets/uploads/2023/11/id14120076-170360-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14120076" class="wp-caption-text">2023年11月19日，洪青体育会用舞狮表演响应罗斯福公园联盟的净园与种花活动。（林宜君／大纪元）</figcaption></figure>
 <p>除了市公园局提供当天活动所需的花苞与器材，华埠商业改进区（Chinatown BID）也将近期在结婚公园（Wedding Garden）美化活动没有用完的大量水仙花球茎，送与罗斯福公园联盟使用。</p>
 <p>从去年10月下旬开始，李翠珊在担任“社区保护和改善联盟”（ACPB）主席期间就发动社区清理罗斯福公园，至今已满一年。肉眼可见，社区对于爱护罗斯福公园的意识与意愿都更加强烈。</p>
 <p>诊所位于中央街（Centre St）的眼科医师居德琳（Andrea Jue）虽然不住在华埠，但她因为小孩在华埠一家学前中心就读，且学校经常使用罗斯福公园，居德琳因此参与当天的公园美化活动，并在行前将活动资讯与诊所病人分享。</p>
@@ -34,35 +34,35 @@
 <p>责任编辑：陈玟绮</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007071.md#1">纽约华埠罗斯福公园内 一男遭殴脸砍伤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/2/n14008465.md#1">费城罗斯福公园东南亚集市</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011440.md#1">华埠罗斯福公园深夜枪击案 男子中枪负伤自行求医</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098816.md#1">费城罗斯福公园东南亚美食市场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/31/n14007071.md#1">纽约华埠罗斯福公园内 一男遭殴脸砍伤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/2/n14008465.md#1">费城罗斯福公园东南亚集市</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/7/n14011440.md#1">华埠罗斯福公园深夜枪击案 男子中枪负伤自行求医</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/19/n14098816.md#1">费城罗斯福公园东南亚美食市场</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/12/6/n11704965.md#1" target="_blank">宁静：《花为媒》被中共禁播十五年只为淫乱华夏</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/16/n10398402.md#1" target="_blank">林辉：掩盖大饥荒真相 五省书记罪责难逃（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/14/n7998054.md#1" target="_blank">“如没有法轮功 我后半生一定在轮椅上度过”</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115070.md#1">印尼巴东山发现至今最古老金字塔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14114677.md#1">乐高乐园：创意无限的奇妙之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115416.md#1">霸王别姬后 虞姬再见项羽 另外时空解谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14117971.md#1">民众目睹：墨西哥一尊圣母像流泪 眼睛变红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112219.md#1">跟我学唐诗（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14119306.md#1">【舞蹈三剑客】浅谈中国儒家思想：仁义礼智信</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14118984.md#1">【车评】娇小而实用 2023 Toyota Corolla Cross Hybrid XSE</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14118974.md#1">【时事金扫描】乌军战略大突破 打乱俄冬季战略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14119121.md#1">去世三周 李克强学籍曝光 北大被指暗流涌动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14119054.md#1">知情人：中共雇妓女去旧金山“欢迎”党魁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14119208.md#1">专访在旧金山抗共中爆红的皇帝扮演者</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118795.md#1">周星驰开拍《少林女足》 莫文蔚想演魔鬼教练</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14118161.md#1">安室奈美惠大量经典歌曲突下架 原因曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118862.md#1">谢娜在林心如面前聊林志颖 对话笑爆网络</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118840.md#1">闪婚105天 日本花滑名将羽生结弦宣布离婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118625.md#1">玛丽亚凯莉推个人芭比娃娃、圣诞巡回演唱会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">亚马逊每日精选 · 11/17日编辑推荐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118460.md#1">电视机应该如何清理才不会受损？ 专家释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117256.md#1">糖为何会导致精神疾病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110885.md#1">盐商品种类多 买盐不妨先看看包装标示</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118285.md#1">如何养出长寿狗狗？9个健康护理要素不可少</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/20/n14120069.htm">让孩子玩得安全 曼哈顿下城居民联盟美化罗斯福公园</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/20/n14120069.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/20/n14120069.htm">让孩子玩得安全 曼哈顿下城居民联盟美化罗斯福公园</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/20/n14120069.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
